syntax = "proto3";
package m2g.pb;

enum InteractionType {
    NO_INTERACTION = 0;
    COLLIDE_TO = 1;
    GET_COLLIDED_BY = 2;
    STUN = 3;
    GET_STUNNED_BY = 4;
}
