syntax = "proto3";
package m2g.pb;

enum ItemCategory {
    NO_ITEM_CATEGORY = 0;
    ITEM_CATEGORY_DEFAULT_RANGED_WEAPON = 1;
    ITEM_CATEGORY_SPECIAL_RANGED_WEAPON = 2;
    ITEM_CATEGORY_DEFAULT_MELEE_WEAPON = 3;
    ITEM_CATEGORY_SPECIAL_MELEE_WEAPON = 4;
}

enum ItemType {
    NO_ITEM = 0;
    ITEM_CONSUMABLE_HP_POTION_20 = 1;
    ITEM_CONSUMABLE_HP_POTION_80 = 2;

    ITEM_REUSABLE_DASH_2S = 1001;
    ITEM_REUSABLE_GUN = 1002;
    ITEM_REUSABLE_MACHINE_GUN = 1003;
    ITEM_REUSABLE_EXPLOSIVE = 1004;
    ITEM_REUSABLE_SWORD = 1005;
    ITEM_REUSABLE_ENEMY_SWORD = 1006;
    ITEM_REUSABLE_LONG_SWORD = 1007;
    ITEM_REUSABLE_AXE = 1008;
}
